Updated images path

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
   </head>
   <body>
     <header>
-      <img src="/images/logo.svg" alt="huddle-logo" />
+      <img src="./images/logo.svg" alt="huddle-logo" />
     </header>
     <main>
       <img
         class="img"
-        src="/images/illustration-mockups.svg"
+        src="./images/illustration-mockups.svg"
         alt="illustration"
       />
       <div class="content">
